# codeclub

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  README.md  bench_tiered.py  benchmark_llm.py  benchmark_scenarios.py  brevity.py  codeclub.skill  compact.py  compressor.py  decompressor.py  dev_loop.py  expander.py  gemini-extension.json  generator.py  hardware.py  models.py  pipeline.py  probe.py  pyproject.toml  repomix_lite.py  retriever.py  reviewer.py  runner.py  smash_server.py  smash_viz.py  spec.py  symbol_table.py  testgen.py  token_counter.py  tournament.py  treefrag.py
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: hooks.json
.cursor/rules/: codeclub.mdc
.github/: copilot-instructions.md
.windsurf/rules/: codeclub.md
benchmarks/: llm.py  results_all.json  results_easy.json  results_gemini_rerun.json  results_hard.json  results_medium.json  results_quick.json  store.py  tiered.py
benchmarks/maps/: codestral-2508.html  deepseek-v3.html  gemini-2.5-flash.html  gemma4-26b-a4b.html  gpt-4.1-mini.html  gpt-4.1-nano.html  llama-4-maverick.html  quant_gemma4-26b-a4b.html  qwen2.5-coder-1.5b.html  qwen3-coder-30b.html  rnj-1-8b.html  sizes_GPT-4.1.html
benchmarks/results/: scenarios_20260414_102021.json  scenarios_20260414_102021.md
cli/: SPEC.md
codeclub/: __init__.py  claude_code_mcp.py  mcp_server.py  stacks.py
codeclub/accounting/: __init__.py  baseline.py  power.py  tracker.py
codeclub/compress/: __init__.py  brevity.py  compressor.py  decompressor.py  expand.py  pipeline.py  repomix.py  semantic.py  tokens.py  tree.py
codeclub/context/: __init__.py  __main__.py  adaptive.py  assembler.py  classifier.py  compaction.py  proxy.py  router.py  store.py  uplift.py
codeclub/dev/: __init__.py  generate.py  loop.py  review.py  runner.py  spec.py  testgen.py
codeclub/infra/: __init__.py  hardware.py  indexer.py  models.py
docs/: architecture.md  benchmarks.md  club-smash.md  compression.md  copilot-billing.md  dev-loop.md  dynamic-context.md  routing.md
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: clubrouter.ts  compress.ts  index.ts
scripts/: probe_csharp_batch.py  probe_go_java_batch.py  probe_ts_batch.py
skills/codeclub/: SKILL.md
tests/: test_adaptive.py  test_assembler.py  test_classifier.py  test_claude_code_mcp.py  test_compaction.py  test_compression.py  test_context_router.py  test_copilot_sdk.py  test_indexer.py  test_proxy_e2e.py  test_stacks.py  test_uplift.py  test_web_git_api.py
tests/fixtures/: issue_1519.txt  stripe_connect.jsx  wallet_bridge_snippet.py  wallet_local.py  wallet_provider_snippet.py  wallet_stripe.py
web/: __init__.py
web/api/: __init__.py  database.py  main.py  models.py
web/frontend/: index.html  (+3 more)
(+30 files in other folders)
