[project]
name = "codeclub"
version = "0.1.0"
description = "Smash code with club. Code small. Less token. Easy to understand."
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "tiktoken>=0.12.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "chromadb>=1.0",
    "anthropic>=0.94.1",
    "github-copilot-sdk>=0.2.2",
]

[project.scripts]
codeclub = "codeclub.cli:main"

[project.optional-dependencies]
dev = ["codeclub"]
compress = ["tree-sitter>=0.23", "tree-sitter-python>=0.23", "tree-sitter-javascript>=0.23", "chromadb>=1.0", "tiktoken>=0.12.0"]
viz = ["matplotlib>=3.8", "plotly>=5.18", "numpy>=1.26"]

[tool.setuptools.packages.find]
where = ["."]
include = ["codeclub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
