[project]
name = "codeclub"
version = "0.1.0"
description = "Tree-sitter code compression for LLM agents. 70-95% fewer tokens, zero quality loss."
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tiktoken>=0.12.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
retrieval = ["chromadb>=1.0"]
test = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["codeclub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
